# price-catalogue

./: .gitignore  LICENSE  README.md  build.sbt  pyproject.toml  requirements.txt
data/: invoices_sample.csv
price_catalogue/: price_catalogue.py
resources/: stopwords.txt
src/main/scala/: PriceCatalogue.scala
