[tool.poetry]
name = "price-catalogue"
version = "0.1.0"
description = "A simple Apache Spark script to group similar items and products using their descriptions."
authors = ["Felipe Zschornack <fzschornack@gmail.com>"]
readme = "README.md"
packages = [{include = "price_catalogue"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.3.0"
Unidecode = "^1.3.4"
numpy = "^1.23.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
